# chat_bots

./: .gitignore  Cargo.toml  README.md
.github/workflows/: go.yml  tg_speaking_from_heart.yml
aalto_bot/src/: util.rs
aalto_bot/src/db/: init.rs  mod.rs  model.rs
aalto_bot/src/handler/: person.rs
army_call_notifier/: go.mod  go.sum
army_call_notifier/src/: app.go  db.go  main.go  parser.go  telegram.go
boggart/: Cargo.toml  go.mod
boggart/src/: config.rs  lib.rs  main.go  main.rs  util.rs
boggart/src/db/: db.rs  init.rs  mod.rs  model.rs
boggart/src/handler/: help.rs  person.rs  person_room.rs  room.rs
boggart/src/internal/app/: app.go  handlers.go  telegram.go
boggart/src/internal/db/: db.go  person.go
boobs_bot/: CMakeLists.txt  README.md
boobs_bot/src/: main.cpp
boobs_bot/src/bot/: Bot.cpp  Bot.hpp
boobs_bot/src/handlers/: Handler.hpp
boobs_bot/src/handlers/image/: ImageHandler.cpp  ImageHandler.hpp  boobs.conf
etc/: db_init.sql
slack_cmd_core/: Cargo.toml
slack_cmd_core/examples/: cmd_jira.rs
slack_cmd_core/src/: handler.rs  lib.rs  main.rs  slack_cmd.rs  slack_helper.rs  state.rs
src/: bot_wrapper.rs  config.rs  lib.rs  main.rs  person_db.rs  util.rs
src/db/: db_impl.rs  init.rs  model.rs
src/handler/: help.rs  main_handler.rs  mod.rs  person.rs  person_room.rs  room.rs
src/handlers/: help.rs  mod.rs  person.rs  room.rs
tg_crypto_deviation/: .rustfmt.toml  Cargo.toml
tg_crypto_deviation/src/: binance.rs  db.rs  main.rs  stream_processor.rs  telegram.rs
tg_fake_nuds_fun/: go.mod  go.sum
tg_fake_nuds_fun/src/: main.go
tg_make_agree_easy/: go.mod  go.sum
tg_make_agree_easy/src/: config.go  handlers.go  main.go
tg_make_agree_easy/src/database/: database.go
tg_speaking_from_heart/: .gitignore  Dockerfile  README.md  go.mod  go.sum
tg_speaking_from_heart/src/: db.go  handlers.go  main.go
tg_speaking_from_heart/src/database/: database.go  json_impl.go
tg_speaking_from_heart/src/db/: db.go  json_impl.go
tg_split_smart_bot/: Cargo.toml
tg_split_smart_bot/data/: storage.csv
tg_split_smart_bot/frontend/: index.html
tg_split_smart_bot/src/: app_state.rs  bot.rs  main.rs  new_group_handler.rs  server.rs
tg_sport_tournament/: Dockerfile  go.mod  go.sum
tg_sport_tournament/src/: config.go  handlers.go  main.go  scenario_state.go
tg_sport_tournament/src/database/: database.go  json_impl.go
