[package]
name = "tvoi_sosed"
version = "0.1.0"
authors = ["Sild <sildtm@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
tokio = { version = "0.2", features = ["macros", "fs"]}
futures = "0.3"
sqlite = "0.25.0"
dict = "0.1.5"
serde = { version = "1.0.194", features = ["derive"] }
