[package]
name = "boggart"
version = "0.1.0"
authors = ["Sild <sildtm@icloud.com>"]
edition = "2018"


[dependencies]
telegram-bot = "0.8"
tokio = { version = "1.37.0", features = ["macros", "fs"]}
futures = "0.3"
dict = "0.1.5"
serde = { version = "1.0.194", features = ["derive"] }
serde-enum-str = "0.3"
