[package]
name = "tg_crypto_deviation"
version = "0.1.0"
edition = "2021"

[dependencies]
binance-rs-async = "1.3.3"
moka = { version = "0.12.8", features = ["sync"] }
anyhow = "1.0.86"
tokio = { version = "1.38.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.3"
frankenstein = {  version = "0.32", features = ["async-trait", "async-http-client", "async-telegram-trait"] }
futures = "0.3.30"
